syntax = "proto3";

package proto_chat;

enum ProtoChatRequestType {
    History = 0;
}

message ProtoChatRequest {
    repeated ProtoChatRequestType requests = 1;
}

message ProtoChatMessage {
    optional uint64 user_id = 1;
    optional string user_message = 2;
}

message ProtoChatHistory {
    repeated ProtoChatMessage history = 1;
}